# code-review-a

./: README.md  pyproject.toml
api/lambda/: delete_update_comment.py  get_updates.py  get_updates_comments.py  put_updates_comments.py
docs/: Untitled Diagram.drawio  openapi.yml
tests/api/: test_get_updates.py
