[tool.poetry]
name = "code-review-a"
version = "0.1.0"
description = "Code Review Repo"
authors = ["Dawid Kraczkowski <dawid.kraczkowski@kaizenreporting.com>"]
packages = [
    { include="api" }
]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
boto3 = "^1.24.74"
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
